--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,14 @@
 # Compiled class file
 *.class
+*.classpath
+*.project
 
-# Log file
+#folders 
+*.settings
+
+*doc/
+
+#Log file
 *.log
 
 # BlueJ files
